# Chatter

./: Cargo.toml  README.md
client/: Cargo.toml
cmp/: Cargo.toml
cmp/src/: lib.rs
message/: Cargo.toml
message/src/: lib.rs
server/: Cargo.toml
