[package]
name = "chatter-client"
version = "0.1.0"
authors = ["Petr <studynkapetr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "chatter"
path = "src/bin/main.rs"

[lib]
name = "chatter"
path = "src/lib.rs"